alignment fixed

--- a/src/app/components/taskbar/taskbar.component.scss
+++ b/src/app/components/taskbar/taskbar.component.scss
@@ -1,10 +1,13 @@
 :host {
-
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
     .taskbar {
         user-select: none;
-        width: inherit;
+        width: 100%;
         height: 50px;
-        padding: 2px;
+        padding: 20px;
         background-color: rgba(54, 54, 54, 0.8);
         display: flex;
         justify-content: space-between;
@@ -16,14 +19,6 @@
             &:hover {
                 background-color: rgba(255, 255, 255, 0.1);
             }
-        }
-
-        .taskbar-items-middle{
-
-        }
-
-        .taskbar-items-right{
-
         }
     }
 }
