--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 body {
     font-family: "Segoe UI", Arial, sans-serif;
-    background-image: url('./assets/img/background-1.jpg');
+    background-image: url('./assets/img/background-2.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
     margin: 0;
     padding: 0;
-    width: 100vw;
+    max-width: 100vw;
+    min-width: 100vw;
     height: 100vh;
     color: white;
 }
